--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,17 @@
 /* место для вашего кода */
 body {
-  font-family: Raleway, sans-serif;
+  font-family: Raleway, sans-serif; /* закидываем скачанный шрифт, задаем фон и цвет текста*/
   background-color: rgb(245, 245, 245);
   color: black;
   margin: 0;
   padding: 0;
 }
 
-.header {
+.header { /* оформляем грид, положение объектов в нем и размер шрифта */
   display: grid;
   margin: 0 auto;
   padding: 92px, 50px;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   max-width: 1100px;
   background-color: white;
@@ -22,40 +22,48 @@ body {
   font-size: 18px;
 }
 
-.header-logo {
+.header-logo { /*задаем положение логотипа*/
   justify-self: center;
 }
 
-.header-img {
+.header-img { /* размеры картинки с шаблона*/
   height: 105px;
   width: 148px;
 }
 
-.nav-list {
-  display: flex;
-  gap: 32px;
-}
-
-.nav-line {
-  text-decoration: none;
-  color:black;
-  list-style: none;
-  border-bottom: 1px solid transparent;
-}
-
-.nav-link-active {
-  border-bottom: 1px solid black;
-}
-
-.header-nav {
+.header-nav {  /*задаем положение для навигации*/
   justify-self: start;
 }
 
-.box-address{
+.nav-list { /*список для навигации*/
+  display: flex;
+  gap: 32px;
+  white-space: nowrap;
+}
+
+.nav-line { /*строка без декора*/
+  text-decoration: none;
+  color:black;
+  list-style: none;
+}
+
+.nav-link-active {  /*псевдо-активная ссылка */
+  border-bottom: 1px solid black;
+}
+
+
+.box-address{ /*редактируем паддинги */
   padding: 95px, 50px, 95px, 810px;
 }
 
-.header-address {
+.header-address { /*задаем положение адрессам*/
   justify-self: end;
   text-align: right;
 }
+.address-link {
+  white-space: nowrap;
+}
+.no-deco {  /* для строк, в которых не нужны точки и прочие метки*/
+  list-style-type: none;
+}
+
