--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,9 @@ body {
 }
 
 .nav-list { /*список для навигации*/
+  list-style: none;
+  padding: 0;
+  margin: 0;
   display: flex;
   gap: 32px;
   white-space: nowrap;
@@ -65,5 +68,38 @@ body {
 }
 .no-deco {  /* для строк, в которых не нужны точки и прочие метки*/
   list-style-type: none;
+}
+
+.cover {
+   max-width: 1100px;
+   margin: 0 auto;
+   padding-top: 293px;
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   min-height: auto;
+   background-size: cover;
+   background-image: url(../images/cover.jpg);
+   background-repeat: no-repeat;
+   box-sizing: border-box;
+}
+
+.cover-title {
+  font-size: 100px;
+  line-height: 115px;
+  padding-top: 165px;
+  padding-left: 50px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin: 0;
+}
+
+.cover-description {
+  font-size: 22px;
+  line-height: 28px;
+  color: white;
+  text-align: center;
 }
 
