--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,7 @@ body {
   background-image: url(../images/cover.jpg); /* задаем картинку для cover */
   background-repeat: no-repeat; /* не повторяем картинку */
   box-sizing: border-box; /* чтобы паддинги не влияли на размер элемента */
+  background-color: white;
 }
 
 .cover-title {
@@ -156,19 +157,26 @@ body {
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
-.button-bet {
-  padding-right: 50px; /* отступ справа */
-  width: 100%;
-  position: relative;
+.button-bet { /*ДА КАК ЕЕ СДЕЛАТЬ ОНА ЕДЕТ ПОСТОЯННО КРИК ДУШИ ПРОСТО */
+  margin: 0 auto;
+  padding: 0;
+  width: 256px;
+  height: 51px;
   background: transparent; /* прозрачный фон */
+  word-spacing: 0px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   text-decoration: none; /* убираем подчеркивание */
   border: 1px solid white; /* белая рамка */
   color: white; /* белый цвет текста */
   font-size: 22px; /* размер шрифта */
   text-transform: uppercase;
+  text-decoration: none; /* убираем подчеркивание */
   line-height: 100%;
   cursor: pointer;
-  text-align: end;
+  position: relative;
   z-index: 2; /* помещаем кнопку поверх псевдоэлемента */
 }
 
@@ -176,7 +184,9 @@ body {
   /* стили для лотов */
   max-width: 1052px; /* задаем максимальную ширину */
   margin: 0 auto; /* выравниваем по центру */
-  padding: 0; /* убираем отступы */
+  padding-left: 24px; /* отступ слева */
+  padding-right: 24px;
+  background-color: white;
 }
 .lots-list {
   /* стили для лотов */
@@ -184,6 +194,11 @@ body {
   grid-template-columns: repeat(3, minmax(334px, 1fr)); /* колонки с минимальной шириной 334px(см. фигму) */
   gap: 24px; /* расстояние между лотами(допустим, столько же, сколько в макете(проверить!!!)) */
   padding: 24px; /* отступы вокруг лотов */
+}
+
+.lots-item {
+  display: flex;
+  flex-direction: column;
 }
 
 .lots-title {
