--- a/styles/style.css
+++ b/styles/style.css
@@ -15,21 +15,21 @@ a {
   /* оформляем грид, положение объектов в нем и размер шрифта */
   display: grid;
   margin: 0 auto;
-  padding: 92px, 50px;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
+  justify-items: center;
   max-width: 1100px; /* задаем максимальную ширину */
   background-color: white;
   color: black;
-  align-items: center;
-  justify-items: center;
   padding: auto;
   font-size: 18px;
+  line-height: 18px;;
 }
 
 .header-nav {
   /*задаем положение для навигации*/
   justify-self: start;
+  grid-column: 1;
 }
 
 .nav-list {
@@ -55,10 +55,9 @@ a {
   list-style-type: circle;
 }
 
-
 .header-logo {
   /*задаем положение логотипа*/
-  justify-self: center;
+  grid-column: 2; /* помещаем в центральную колонку */
 }
 
 .header-img {
@@ -69,15 +68,19 @@ a {
 
 .header-address {
   /*задаем положение адрессам*/
-  grid-column: 3; /* помещаем в третью колонку */
-  justify-self: end; /* выравниваем по правому краю */
-  text-align: right; /* выравниваем текст по правому краю */
   padding-right: 50px; /* отступ справа */
-
+  grid-column: 3; /* помещаем в третью колонку */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 240px;
+  line-height: 24px;
 }
+
 .address-link {
   white-space: nowrap;
 }
+
 .no-deco {
   /* для строк, в которых не нужны точки и прочие метки*/
   list-style-type: none;
@@ -94,7 +97,12 @@ a {
   left: 0; /* прижимаем элемент к родительскому */
   height: 100%; /* высота растянута  */
   width: 100%; /* ширина растянута */
-  background-color: rgba(0, 0, 0, 0.6); /* полупрозрачный черный фон в 60%(см. фигму) */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.6
+  ); /* полупрозрачный черный фон в 60%(см. фигму) */
   z-index: 1; /* помещаем элемент ниже текста, чтобы он тоже не затемнялся */
 }
 
@@ -127,19 +135,23 @@ a {
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
-.cover-title-align { /* класс для выравнивания заголовка */
-  display: block; 
+.cover-title-align {
+  /* класс для выравнивания заголовка */
+  display: block;
 }
 
-.cover-title-align-start { /* в начало */
+.cover-title-align-start {
+  /* в начало */
   text-align: start;
 }
 
-.cover-title-align-center { /* по центру */
+.cover-title-align-center {
+  /* по центру */
   text-align: center;
 }
 
-.cover-title-align-end { /* в конец */
+.cover-title-align-end {
+  /* в конец */
   text-align: end;
 }
 
@@ -156,7 +168,7 @@ a {
   line-height: 28px;
   font-weight: 400;
   word-spacing: 0.9em; /* размер пробелов */
-  color: white; 
+  color: white;
   text-transform: uppercase;
   white-space: nowrap; /* чтобы текст не переносился */
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
@@ -167,7 +179,13 @@ a {
   text-decoration: none; /* убираем подчеркивание */
 }
 
-.button-bet { /*ДА КАК ЕЕ СДЕЛАТЬ ОНА ЕДЕТ ПОСТОЯННО КРИК ДУШИ ПРОСТО */
+.link-black {
+  color: black;
+  text-decoration: none; /* убираем подчеркивание */
+}
+
+.button-bet {
+  /*ДА КАК ЕЕ СДЕЛАТЬ ОНА ЕДЕТ ПОСТОЯННО КРИК ДУШИ ПРОСТО */
   margin: 0 auto;
   padding: 0;
   width: 256px;
@@ -199,7 +217,10 @@ a {
 .lots-list {
   /* стили для лотов */
   display: grid; /* делаем элемент грид-контейнером */
-  grid-template-columns: repeat(3, minmax(334px, 1fr)); /* колонки с минимальной шириной 334px(см. фигму) */
+  grid-template-columns: repeat(
+    3,
+    minmax(334px, 1fr)
+  ); /* колонки с минимальной шириной 334px(см. фигму) */
   gap: 24px; /* расстояние между лотами(допустим, столько же, сколько в макете(проверить!!!)) */
   padding: 24px; /* отступы вокруг лотов */
 }
