--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ p {
     /* стили для заголовков и параграфов снова сбрасываем(непонятно почему, но работает толлько так)*/
   margin: 0;
   padding: 0;
+  
 }  
 
 body {
@@ -232,6 +233,7 @@ article {
   padding-right: 24px;
   background-color: white;
   padding-top: 80px; /* отступ сверху визуально(найти актуальное значение через проверку) */
+  z-index: 1;
 }
 
 .lots-list {
@@ -245,12 +247,36 @@ article {
   padding: 24px; /* отступы вокруг лотов */
 }
 
+.lots-item-cinema::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
+
 .lots-item-cinema {
   background-image: url(../images/card-lot-01.jpg);
   height: 596px; /* высота лота */
   background-size: cover; /* картинка должна покрывать весь элемент */
   background-position: center;
   background-repeat: no-repeat; /* не повторяем картинку */
+  position: relative;
+  z-index: 1;
+}
+
+.lots-item-book::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: -1;
 }
 
 .lots-item-book {
@@ -259,6 +285,19 @@ article {
   background-size: cover; /* картинка должна покрывать весь элемент */
   background-repeat: no-repeat; /* не повторяем картинку */
   background-position: center;
+  position: relative;
+  z-index: 1;
+}
+
+.lots-item-painting::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: -1;
 }
 
 .lots-item-painting {
@@ -267,6 +306,8 @@ article {
   background-size: cover; /* картинка должна покрывать весь элемент */
   background-repeat: no-repeat; /* не повторяем картинку */
   background-position: center;
+  position: relative;
+  z-index: 1;
 }
 
 .lots-title {
@@ -274,19 +315,20 @@ article {
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
-  z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
 .lots-description-h {
+  color: white;
   font-size: 22px;
   font-weight: 700;
   line-height: 26px;
   text-decoration: underline;
   text-transform: uppercase;
-  z-index: 2;
+  z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
-.lots-description-text {
+.lots-description {
+  color: white;
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
