Фиксы фиксов: макс. размеры, добавление шрифтов, ссылка на телефон

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* место для вашего кода */
+ /* место для вашего кода */
 h1,
 h2,
 h3,
@@ -7,7 +7,7 @@ p {
   margin: 0;
   padding: 0;
   
-}  
+} 
 
 body {
   font-family: "Raleway", sans-serif; /* закидываем скачанный шрифт, задаем фон и цвет текста во всем теле */
@@ -227,7 +227,6 @@ article {
 
 .lots {
   /* стили для лотов */
-  max-width: 1052px; /* задаем максимальную ширину */
   margin: 0 auto; /* выравниваем по центру */
   padding-left: 24px; /* отступ слева */
   padding-right: 24px;
@@ -243,6 +242,7 @@ article {
     3,
     minmax(334px, 1fr)
   ); /* колонки с минимальной шириной 334px(см. фигму) */
+  max-width: 1052px;
   gap: 24px; /* расстояние между лотами(допустим, столько же, сколько в макете(проверить!!!)) */
   padding: 24px; /* отступы вокруг лотов */
 }
@@ -338,10 +338,9 @@ article {
 }
 
 .about {
-  max-width: 1052px; /* задаем максимальную ширину */
   margin: 0 auto; /* выравниваем по центру */
   display: grid;
-  grid-template-columns: 1fr 2fr; /* две колонки */
+  grid-template-columns: 1fr 2fr; /* две колонки с разными габаритами*/
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 80px; /* отступ сверху визуально(найти актуальное значение через проверку) */
