--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,3 @@
- /* место для вашего кода */
-h1,
-h2,
-h3,
-p {
-    /* стили для заголовков и параграфов снова сбрасываем(непонятно почему, но работает толлько так)*/
-  margin: 0;
-  padding: 0;
-  
-} 
 
 body {
   font-family: "Raleway", sans-serif; /* закидываем скачанный шрифт, задаем фон и цвет текста во всем теле */
@@ -30,14 +20,11 @@ article {
 .header {
   /* оформляем грид, положение объектов в нем и размер шрифта */
   display: grid;
-  margin: 0 auto;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   justify-items: center;
   max-width: 1100px; /* задаем максимальную ширину */
   background-color: white;
-  color: black;
-  padding: auto;
   font-size: 18px;
   line-height: 18px;
 }
@@ -45,7 +32,6 @@ article {
 .header-nav {
   /*задаем положение для навигации*/
   justify-self: start;
-  grid-column: 1;
 }
 
 .nav-list {
@@ -76,8 +62,7 @@ article {
 }
 
 .header-logo {
-  /*задаем положение логотипа*/
-  grid-column: 2; /* помещаем в центральную колонку */
+  align-items: center; /*задаем положение логотипа??? мб зря добавляла, ничего не меняет*/
 }
 
 .header-img {
@@ -88,24 +73,18 @@ article {
 
 .header-address {
   /*задаем положение адрессам*/
-  padding-right: 50px; /* отступ справа */
-  grid-column: 3; /* помещаем в третью колонку */
+  font-size: 18px;
   display: flex;
-  flex-direction: column;
   align-items: flex-start;
   max-width: 240px;
-  line-height: 24px;
-}
-
-.address-link {
-  white-space: nowrap;
+  line-height: 23px;
 }
 
 .no-deco {
   /* для строк, в которых не нужны точки и прочие метки*/
   list-style-type: none;
   padding: 0; /* убираем стандартные отступы */
-  margin: 0;
+  margin: 0 auto;
   line-height: 1.35; /* межстрочный интервал */
 }
 
@@ -322,13 +301,24 @@ article {
   font-size: 22px;
   font-weight: 700;
   line-height: 26px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 48px;
   text-decoration: underline;
   text-transform: uppercase;
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
 .lots-description {
+  position: absolute;
+  bottom: 0;
   color: white;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 400;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 48px;
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
@@ -373,6 +363,7 @@ article {
 }
 
 .about-text {
+  max-width: 693px;;
   padding-top: 150px;
   font-size: 20px;
   line-height: 24px;
@@ -382,6 +373,9 @@ article {
   align-items: center;
 }
 
+.par-2 {
+  padding-top: 20px; /* примерный отступ, сравнить в пискельперфект */
+}
 .footer {
   padding-top: 80px; /* отступ сверху визуально(найти актуальное значение через проверку) */
   max-width: 1100px; /* задаем максимальную ширину */
@@ -397,6 +391,7 @@ article {
 .footer-address {
   /* стили для адреса в футере */
   padding-left: 50px; /* отступ слева */
+  max-width: 265px;
 }
 
 .footer-nav {
