--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@ body {
   margin: 0 auto;
   padding: 0;
   max-width: 1100px;
-
 }
 
 a {
@@ -363,7 +362,7 @@ article {
 }
 
 .about-text {
-  max-width: 693px;;
+  max-width: 693px;
   padding-top: 150px;
   font-size: 20px;
   line-height: 24px;
