--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Raleway", sans-serif; /* закидываем скачанный шрифт, задаем фон и цвет текста во всем теле */
   background-color: rgb(245, 245, 245);
@@ -58,7 +57,7 @@ article {
   /* ссылка с увеличенным шрифтом */
   font-size: 20px;
   line-height: 20px;
-  font-weight: 400;;
+  font-weight: 400;
 }
 
 .header-logo {
@@ -142,6 +141,17 @@ article {
   display: block;
 }
 
+.padding-tebe { /*надо как-то альтернативу придумать, а то как на коленках настраивать*/
+  padding-top: 20px;
+  padding-left: 30px;
+
+}
+
+.padding-nado {
+  padding-top: 20px;
+  padding-left: 612px;
+}
+
 .cover-title-align-start {
   /* в начало */
   text-align: start;
@@ -212,7 +222,6 @@ article {
   /* стили для лотов */
   padding-top: 400px 24px;
   background-color: white;
-  padding-top: 80px; /* отступ сверху визуально(найти актуальное значение через проверку) */
   z-index: 1;
 }
 
