--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@ body {
   color: black;
   margin: 0 auto;
   padding: 0;
-  max-width: 1100px;
+  max-width: 1100px; /*для удобства*/
 }
 
 a {
@@ -85,7 +85,7 @@ article {
   text-underline-offset: 4px;
 }
 
-.address-address {
+.address-address { /*сохраняем форматирование из HTML(поискать замену свойству потом)*/
   white-space: pre;
 }
 
@@ -362,7 +362,7 @@ article {
   margin: 0 auto; /* выравниваем по центру */
   display: grid;
   grid-template-columns: 240px 1fr; /* две колонки с разными габаритами(фиксировано для картинки, остальное на макс)*/
-  align-items: start;
+  align-items: stretch;
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 125px; /* отступ сверху */
@@ -401,7 +401,7 @@ article {
 
 .about-text {
   margin-left: 120px;
-  margin-right: 24px;
+  margin-right: 5px;
   max-width: 693px;
   font-size: 20px;
   line-height: 24px;
@@ -420,9 +420,10 @@ article {
 .footer {
   padding-top: 180px; /* отступ сверху визуально(найти актуальное значение через проверку) */
   padding-bottom: 100px; /* отступ сверху визуально(найти актуальное значение через проверку) */
+  margin: 0 auto; /* выравниваем по центру */
+  font-size: 18px;
   max-width: 1100px; /* задаем максимальную ширину */
   min-height: 180px;
-  margin: 0 auto; /* выравниваем по центру */
   background-color: white;
   color: black;
   display: grid; /* делаем элемент грид-контейнером */
@@ -433,15 +434,20 @@ article {
 .footer-address {
   /* стили для адреса в футере */
   padding-left: 50px; /* отступ слева */
-  max-width: 265px;
+  max-width: 261px;
+  font-style: normal; /*убираем курсив*/
+  line-height: 24px;
+  white-space: nowrap;
 }
 
 .footer-nav {
   /* стили для навигации в футере */
+  padding-top: 40px;
   display: flex; /* делаем элемент flex-контейнером */
   flex-direction: column; /* выстраиваем элементы в столбик */
   text-align: center;
   align-items: center;
+  line-height: 18px;
 }
 
 .socials {
