--- a/styles/style.css
+++ b/styles/style.css
@@ -422,7 +422,7 @@ article {
 
 .footer {
   padding-top: 180px; /* отступ сверху визуально(найти актуальное значение через проверку) */
-  padding-bottom: 100px; /* отступ сверху визуально(найти актуальное значение через проверку) */
+  padding-bottom: 75px; /* отступ сверху визуально(найти актуальное значение через проверку) */
   margin: 0 auto; /* выравниваем по центру */
   font-size: 18px;
   max-width: 1100px; /* задаем максимальную ширину */
@@ -450,6 +450,7 @@ article {
 .footer-address {
   /* стили для адреса в футере */
   padding-left: 50px; /* отступ слева */
+  padding-bottom: 5px;
   max-width: 261px;
   font-style: normal; /*убираем курсив*/
   line-height: 24px;
@@ -459,7 +460,7 @@ article {
 .socials {
   /* стили для социальных сетей */
   padding-bottom: 50px;
-  padding-left: 80px;
+  padding-left: 75px;
   display: grid; /* делаем элемент грид-контейнером */
   grid-template-columns: repeat(3, 1fr); /* три колонки */
   gap: 0px; /*пробел между иконками*/
